samples/_failures_safe/1761563765_16f9a9_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_b0c255c0.c: In function ‘print_token_type’:
./samples/SAFE/__tmp_b0c255c0.c:170:9: error: expected expression at end of input
  170 |         case
      |         ^~~~
./samples/SAFE/__tmp_b0c255c0.c:170:9: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_b0c255c0.c:170:9: error: expected declaration or statement at end of input
